<resources>
    <string name="app_name">EventBuddy</string>
    <string name="event_image">Event image</string>
    <string name="create_event_title">Create event</string>
    <string name="event_title_edit_text">Title of the event</string>
    <string name="event_description_edit_text">Description of the event</string>
    <string name="event_author_edit_text">Author of the event</string>
    <string name="event_type_edit_text">Type of the event</string>
    <string name="create_event">Create</string>
    <string name="back_button">Back</string>
    <string name="event_date">Event date</string>
    <string name="event_time">Event time</string>
    <string name="select_time">Select time</string>
    <string name="eventTitleToast">Please input the event\'s title</string>
    <string name="eventDescriptionToast">Please input the event\'s description</string>
    <string name="eventTypeToast">Please input the event\'s type</string>
    <string name="eventDateToast">Please input the event\'s date</string>
    <string name="eventTimeToast">Please input the event\'s time</string>
    <string name="anonymous_author">Anonymous author</string>
    <string name="eventCityToast">Please input the event\'s city</string>
    <string name="event_address_edit_text">Event\'s address</string>
    <string name="event_city_edit_text">City in which the event is held</string>
    <string name="interested">Interested:</string>
    <string name="going">Going:</string>
    <string name="delete">Delete event</string>
    <string name="hint_search">Search</string>
    <string name="search_event_hint">Search events by title</string>
    <string-array name="eventTypes">
        <item>Party</item>
        <item>Concert</item>
        <item>Fundraiser</item>
        <item>Public speech</item>
        <item>Protest</item>
    </string-array>
    <string-array name="eventFilters">
        <item>All</item>
        <item>Party</item>
        <item>Concert</item>
        <item>Fundraiser</item>
        <item>Public speech</item>
        <item>Protest</item>
    </string-array>

</resources>